--- a/Map Wars/AndroidManifest.xml
+++ b/Map Wars/AndroidManifest.xml
@@ -7,12 +7,26 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+	
+    <!-- Google Maps related permissions -->
+	<uses-permission android:name="android.permission.INTERNET" />	
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    
+	<!-- GL ES is needed for Maps v2 -->
+	<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.lucasdnd.mapwars.MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +36,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Google Maps v2 API Key -->
+        <meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="need_map_key"/>
     </application>
-
 </manifest>
