--- a/Map Wars/AndroidManifest.xml
+++ b/Map Wars/AndroidManifest.xml
@@ -27,6 +27,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
+        <!-- Required by Google Play Services -->
+        <meta-data
+		    android:name="com.google.android.gms.version"
+		    android:value="@integer/google_play_services_version" />
+        
         <activity
             android:name="com.lucasdnd.mapwars.MainActivity"
             android:label="@string/app_name" >
@@ -37,9 +42,9 @@
             </intent-filter>
         </activity>
         
-        <!-- Google Maps v2 API Key -->
+        <!-- Google Maps v2 API Key (Debug Key) -->
         <meta-data
 		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="need_map_key"/>
+		    android:value="AIzaSyA05qmG9R1ph4GSXK8whAO6TMf80qfeYH0"/>
     </application>
 </manifest>
