--- a/Map Wars/AndroidManifest.xml
+++ b/Map Wars/AndroidManifest.xml
@@ -34,7 +34,8 @@
         
         <activity
             android:name="com.lucasdnd.mapwars.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
