--- a/Map Wars/AndroidManifest.xml
+++ b/Map Wars/AndroidManifest.xml
@@ -46,6 +46,6 @@
         <!-- Google Maps v2 API Key (Debug Key) -->
         <meta-data
 		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyA05qmG9R1ph4GSXK8whAO6TMf80qfeYH0"/>
+		    android:value="@string/GoogleMapsKey"/>
     </application>
 </manifest>
