Untrack api keys file

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ proguard/
 *.iws
 .idea/
 
+# API Keys
+api-keys.xml
+
 # Modified version of the Eclipse.gitignore found in https://github.com/github/gitignore/blob/master/Global/Eclipse.gitignore
 
 *.pydevproject
